Finished changes to v2

--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -9,6 +9,11 @@ resources.frontController.controllerDirectory = APPLICATION_PATH "/controllers"
 resources.frontController.params.displayExceptions = 1
 resources.layout.layoutPath = APPLICATION_PATH "/layouts"
 resources.layout.layout = "layout"
+autoloadernamespaces.capex = "Capex_"
+
+default.adminlogin = "admin"
+default.adminpass = "admin"
+
 
 
 database.adapter = 'Pdo_Mysql'
