Added emailing feature and Templates menu item

--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -14,7 +14,19 @@ expences.group[] = "OPEX"
 expences.group[] = "CAPEX"
 records.perpage = 3
 app.exceptions_passthrough = 1
-
+app.default.locale = 'ua'
+app.default.from = 'admin@localhost'
+app.locales[] = 'ua'
+app.locales[] = 'en'
+template.types[] = 'approved_next'
+template.types[] = 'approved_owner'
+template.types[] = 'approved_next_subj'
+template.types[] = 'approved_owner_subj'
+template.types[] = 'declined_owner'
+template.types[] = 'declined_owner_subj'
+template.types[] = 'confirm'
+template.types[] = 'confirm_subj'
+template.types[] = 'comment'
 
 database.adapter = 'Pdo_Mysql'
 database.params.dbname = "supercapex"
