Fixed emeils generation

--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -27,6 +27,12 @@ template.types[] = 'declined_owner_subj'
 template.types[] = 'confirm'
 template.types[] = 'confirm_subj'
 template.types[] = 'comment'
+template.types[] = 'comment_subj'
+template.default.approved_next_subj = 'Invoice "%fname%" requires your attention.'
+template.default.approved_owner_subj = 'Invoice "%fname%" was just approve by %aname%.'
+template.default.declined_owner_subj = 'Invoice "%fname%" was just declined by %aname%.'
+template.default.confirm_subj = 'This is to confirm that your action on invoice "%fname%" was successful.'
+template.default.comment_subj = '%aname% just commented on invoice "%fname".'
 
 database.adapter = 'Pdo_Mysql'
 database.params.dbname = "supercapex"
